        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=12801
        Assertion failure in createMarkup() (root) when doing Select All, Copy in an SVG document

        Test: editing/pasteboard/createMarkup-assert.xml

        * editing/markup.cpp:
        (WebCore::createMarkup): Removed the assertion, because it's wrong in a non-HTML world.



Canonical link: https://commits.webkit.org/16756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19926 268f45cc-cd09-0410-ab3c-d52691b4dbfc